--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/792020331e.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/favicon.ico">
+
 
   </head>
   <body>
 
     <div class="container">
-      <h1 class = "result">Refresh Me</h1>
+      <h2 class = "result">Click on Dice to play!</h2>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
+        <img class="img-dice" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
+        <img class="img-dice" src="images/dice6.png">
       </div>
 
     </div>
+      <a href="#">
+      <img id="Clickable-img" src="images/Dice-Clickable.png" alt="click-here" onclick="diceGame()">
+      </a>
 
 
+
+
+    <script type="text/javascript" src="index.js">
+    diceGame();
+    </script>
   </body>
 
   <footer>
-    🎲 dice 🎲
-    <script type="text/javascript" src="index.js">
-    </script>
+    🎲 dice game 🎲
+
   </footer>
 </html>
