--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 
 
     <script type="text/javascript" src="index.js">
-    diceGame();
     </script>
   </body>
 
   <footer>
-    🎲 dice game 🎲
+    🎲 Dice Game 🎲
 
   </footer>
 </html>
