remove onclick added event listener

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div>
       <a href="#">
-      <img id="Clickable-img" src="images/Dice-Clickable.png" alt="click-here" onclick="diceGame()">
+      <img id="Clickable-img" src="images/Dice-Clickable.png" alt="click-here">
       </a>
 
 
